_generated-doc/3.27/config/quarkus-reactive-pg-client.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

h|[[quarkus-reactive-pg-client_section_quarkus-datasource]] [.section-name.section-level0]##link:#quarkus-reactive-pg-client_section_quarkus-datasource[Datasources]##
h|Type
h|Default

a| [[quarkus-reactive-pg-client_quarkus-datasource-reactive-postgresql-pipelining-limit]] [.property-path]##link:#quarkus-reactive-pg-client_quarkus-datasource-reactive-postgresql-pipelining-limit[`quarkus.datasource.reactive.postgresql.pipelining-limit`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.reactive.postgresql.pipelining-limit+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".reactive.postgresql.pipelining-limit`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".reactive.postgresql.pipelining-limit+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The maximum number of inflight database commands that can be pipelined.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_POSTGRESQL_PIPELINING_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_POSTGRESQL_PIPELINING_LIMIT+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-reactive-pg-client_quarkus-datasource-reactive-postgresql-ssl-mode]] [.property-path]##link:#quarkus-reactive-pg-client_quarkus-datasource-reactive-postgresql-ssl-mode[`quarkus.datasource.reactive.postgresql.ssl-mode`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.reactive.postgresql.ssl-mode+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".reactive.postgresql.ssl-mode`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".reactive.postgresql.ssl-mode+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
SSL operating mode of the client.

See link:https://www.postgresql.org/docs/current/libpq-ssl.html#LIBPQ-SSL-PROTECTION[Protection Provided in Different Modes].


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_POSTGRESQL_SSL_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_POSTGRESQL_SSL_MODE+++`
endif::add-copy-button-to-env-var[]
--
a|`disable`, `allow`, `prefer`, `require`, `verify-ca`, `verify-full`
|`+++disable+++`

a| [[quarkus-reactive-pg-client_quarkus-datasource-reactive-postgresql-use-layer7-proxy]] [.property-path]##link:#quarkus-reactive-pg-client_quarkus-datasource-reactive-postgresql-use-layer7-proxy[`quarkus.datasource.reactive.postgresql.use-layer7-proxy`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.reactive.postgresql.use-layer7-proxy+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".reactive.postgresql.use-layer7-proxy`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".reactive.postgresql.use-layer7-proxy+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Level 7 proxies can load balance queries on several connections to the actual database. When it happens, the client can be confused by the lack of session affinity and unwanted errors can happen like ERROR: unnamed prepared statement does not exist (26000). See link:https://vertx.io/docs/vertx-pg-client/java/#_using_a_level_7_proxy[Using a level 7 proxy]


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_POSTGRESQL_USE_LAYER7_PROXY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_POSTGRESQL_USE_LAYER7_PROXY+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`


|===

